--- a/src/app.html
+++ b/src/app.html
@@ -4,20 +4,21 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-	<meta name="viewport" content="width=device-width" />
-	<title>Azharul Islam</title>
-	<meta name="description" content="Frontend Software Engineer based in Qatar,
-		specialised in Mobile and Web apps.">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#0a0a0f" />
+	<meta name="color-scheme" content="dark" />
+	<title>Azharul Islam - Software Engineering Manager & Frontend Expert</title>
+	<meta name="description" content="Software Engineering Manager and Frontend Development expert since 2016, specializing in Mobile and Web applications. Based in Qatar.">
+	
+	<!-- Preconnect to Google Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-		rel="stylesheet">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-		rel="stylesheet">
+	
+	<!-- Google Fonts - Inter, Lora -->
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 
-		<script src="https://unpkg.com/@phosphor-icons/web"></script>
-
+	<!-- Phosphor Icons -->
+	<script src="https://unpkg.com/@phosphor-icons/web"></script>
 
 	%sveltekit.head%
 </head>
